Move compilation target to Android API 18, move some classes to proper packages
Signed-off-by: Frca <killerfrca@gmail.com>

--- a/Purtges-Android/src/main/res/values/strings.xml
+++ b/Purtges-Android/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="drawer_open">Opening ...</string>
     <string name="drawer_close">Closing ...</string>
 
+    <string name="section_title_log">Log</string>
     <string name="section_title_data">Data</string>
     <string name="section_title_list">Seznam</string>
     <string name="navigation">Navigation</string>
